2004-06-16  Malcolm Purvis  <malcolmp@xemacs.org>

	* malloc.c (morecore): siz is a long because in some architectures
	(eg ia-64) an int cannot hold the address range.  Additional patch
	from the SuSe distribution.

2004-06-15  Malcolm Purvis  <malcolmp@xemacs.org>

	* emacs.c:
	* malloc.c: lim_data is a long because in some architectures
	(eg ia-64) an int cannot hold the address range.
	* mem-limits.h: lim-data is a long.  Linux uses getrlimit() instead
	of ulimit() because ulimit() always returns -1.
	* file-coding.h (struct Lisp_Coding_System): Moved a field to the
	end of the structure to work around alignment problems on the ia-64.
	* file-coding.c (struct convert_eol_coding_system): Added dummy
	field to work around alignment problems on the ia-64.

2004-06-08  Didier Verna  <didier@xemacs.org>

	* config.h.in (EXTERN_C_BLOCK_BEGIN): Remove.
	(EXTERN_C_BLOCK_END): Ditto.
	* nas.c: Use BEGIN_C_DECLS and END_C_DECLS instead.

2004-06-07  Adrian Aichner  <adrian@xemacs.org>

	* device-x.c (x_IO_error_handler): Phrase duplication typo fixes
	for typos found by
	xemacs-builds/adrian/typology/phrase-duplication-typo.pl.

2004-06-06  Ilya N. Golubev  <gin@mo.msk.ru>

	* extw-Xt.c (_XT_WAIT_FOR_SOMETHING): Fix: complete macro
	renaming: #define.

2004-06-03  Didier Verna  <didier@xemacs.org>

	* config.h.in (EXTERN_C_BLOCK_BEGIN): New macro.
	(EXTERN_C_BLOCK_END): Ditto.
	* nas.c: Use them around audio headers.
	* extw-Xt.c: Fix EXTERN_C usage (see 2004-06-02 below).

2004-06-02  Didier Verna  <didier@xemacs.org>

	C++ related fixes.

	* ExternalClient-Xlib.c (window_has_focus_p): Fix nchild parameter
	type.
	* ExternalClient.c (ComputeWindowAttributes): Fix old K&R function
	prototype.
	* ExternalClient.c (Destroy): Ditto.
	* ExternalClient.c (QueryGeometry): Ditto.
	* ExternalShell.c (EventHandler): Ditto.
	* ExternalShell.c (ExternalShellDestroy): Ditto.
	* ExternalShell.c (ChangeManaged): Ditto.
	* ExternalShell.c (ExternalShellRootGeometryManager): Ditto.